Sk-code-repo/Section_2/validate.tf

resource "aws_instance" "myec2" {
  ami           = data.aws_ami.app_ami.id
  instance_type = var.sk
}
